<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings_black"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_additionally">
        <menu>
            <item
                android:id="@+id/nav_list_apps"
                android:icon="@drawable/ic_nav_list_app_black"
                android:title="@string/nav_list_apps" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_nav_about_us_black"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_download_all_audio"
                android:icon="@drawable/ic_nav_download"
                android:title="@string/nav_download_all_audio" />
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_nav_rating_black"
                android:title="@string/nav_rate_app" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_nav_share_black"
                android:title="@string/nav_share" />
        </menu>
    </item>
</menu>